--- a/app/src/main/res/layout/timeline_layout.xml
+++ b/app/src/main/res/layout/timeline_layout.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#ffffff"
         android:gravity="center"
+        android:layout_gravity="center"
         android:orientation="vertical"
-        android:background="@color/colorPrimaryDark"
-        >
+        android:layout_marginHorizontal="20dp">
 
-        <TextView
-            android:layout_marginVertical="70dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Помощь:"
-            android:layout_gravity="center"
-            android:textSize="40dp"
-            android:textColor="#fff"/>
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barchart1"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginVertical="5dp"/>
 
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barchart2"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginVertical="5dp"
+            android:padding="10dp"
+            />
 
 
     </LinearLayout>
 
 
-
-</ScrollView>
+</LinearLayout>
